# augmented-penetration-testing

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  pyproject.toml
.apt/: chains.json
.github/: copilot-instructions.md
.github/agents/: architect.md  feature-planner.md  implementor.md  reviewer.md  tester.md
.github/workflows/: tests.yml  update-architecture-diagram.yml
docs/d2/: architecture.d2
src/: main.py
src/c2/: protocol.py  server.py
src/components/app/: navbar.py
src/components/c2/: agent_detail.py  session_table.py
src/components/chains/: chain_builder.py  chain_canvas.py  chain_card.py  chain_node_card.py  module_palette.py
src/components/home/: hero.py  workflow.py
src/components/modules/: filter_bar.py  module_card.py  tactic_section.py
src/components/targets/: actions.py  add.py  context.py  list.py  target.py
src/models/: apt.py  chain.py  chain_node.py  module_metadata.py  target.py
src/modules/: base_module.py
src/modules/collection/: screenshot.py
src/modules/command_and_control/: beacon.py
src/modules/credential_access/: dump_shadow.py
src/modules/defense_evasion/: disable_firewall.py
src/modules/discovery/: user_process_enum.py
src/utils/: module_loader.py  permissions.py  ssh_helper.py
src/views/: app_view.py  c2_view.py  chains_view.py  home_view.py  modules_view.py  settings_view.py  targets_view.py
templates/: architecture.md  decision-log.md
tests/: test_flet_api_compat.py  test_phase0_phase1.py
workflows/: 01-new-project.md  02-add-feature.md  03-project-review.md
(+10 files in other folders)
